# MDFly

./: CMakeLists.txt  README.md  mdfly_config.json  motor_prop_config.json  rascal_param.json  run_scenario1.sh  run_scenario2.sh  run_scenario3.sh  run_scenario4.sh  scenario3_trajectory.csv  x8_param.json
.cache/clangd/index/: actuation.cpp.08D39CCFDC6E4BD8.idx  actuation.h.9FB0226752E4C721.idx  attitude.cpp.E2F4CF4052611782.idx  attitude.h.A36E2AAE28BA415B.idx  camera_model.cpp.34FFCAA1EFA94523.idx  camera_model.h.15FB0ECECD85F91D.idx  json.hpp.7C01BFA736C99BC1.idx  main.cpp.BEBC7AFE0E896874.idx  mavlink_comm.cpp.E2704171E5C69FAE.idx  mavlink_comm.h.A54ED7DB3061C963.idx  motor_model.cpp.19E9E95579C61EC9.idx  motor_model.h.E0CA1F42480F3027.idx  pid_controller.cpp.286312CD06C00A65.idx  pid_controller.h.A892C75C03769ED1.idx  scenario1_formation.cpp.80E019BD1FBB27D8.idx  scenario2_tracking.cpp.B93636499FC792E7.idx  scenario3_takeoff_landing.cpp.D4B13FAB30184E02.idx  scenario4_qgc.cpp.6A38CBD9CF3282B6.idx  sensor_model.cpp.A0542EF8B52DC567.idx  sensor_model.h.506891DB7147BDE6.idx  simulator.cpp.015BF1455560AF5A.idx  simulator.h.BCF4006D0B00ACC2.idx  variable.cpp.38887287C2D9CAC6.idx  (+3 more)
examples/: main.cpp  scenario1_formation.cpp  scenario2_tracking.cpp  scenario3_takeoff_landing.cpp  scenario4_qgc.cpp
include/mdfly/: actuation.h  attitude.h  camera_model.h  mavlink_comm.h  motor_model.h  pid_controller.h  sensor_model.h  simulator.h  variable.h  wind.h
src/: actuation.cpp  attitude.cpp  camera_model.cpp  mavlink_comm.cpp  motor_model.cpp  pid_controller.cpp  sensor_model.cpp  simulator.cpp  variable.cpp  wind.cpp
visualizer/: dashboard.css  index.html  package-lock.json  udp_bridge.py  visualizer.js
